Spydroid v6.0 - Bug fixes in the RTSP server, it now can communicate with a VideoView - Conf changes in the web interface are now persistant - New design - new ClientActivity that contains a VideoView - some code cleaning
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@162 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/credits.htm
+++ b/assets/www/credits.htm
@@ -38,7 +38,7 @@
 
       <div>
 	<ul>
-	  <div><h1>All those sounds where found on freesound.org</h1></div>
+	  <div><h1>All those sounds were found on freesound.org</h1></div>
 	  <div>
 	    <li><a href="http://www.freesound.org/people/IFartInUrGeneralDirection/sounds/37733/">Fart sound</a>: IFartInUrGeneralDirection</li>
 	    <li><a href="http://www.freesound.org/people/IFartInUrGeneralDirection/sounds/53922/">Fart 2 sound</a>: IFartInUrGeneralDirection</li>
