- Improved client (ClientActivity.java) - Bux fixes
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@164 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -117,13 +117,14 @@
 		<div class="select-group">
 		  <label>Bitrate : </label>
 		  <select id="bitrate">
-		    <option selected>1000 bps</option>
-		    <option>500 bps</option>
-		    <option>400 bps</option>
-		    <option>300 bps</option>
-		    <option>200 bps</option>
-		    <option>100 bps</option>
-		    <option>50 bps</option>
+		    <option selected>1000 kbps</option>
+		    <option>700 kbps</option>
+		    <option>500 kbps</option>
+		    <option>400 kbps</option>
+		    <option>300 kbps</option>
+		    <option>200 kbps</option>
+		    <option>100 kbps</option>
+		    <option>50 kbps</option>
 		  </select>
 		</div>
 	      </div>
