git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@166 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -27,7 +27,7 @@
 
     <header>
       <img src="images/spydroid.png" alt="Spydroid"></img>
-      <a href="http://www.youtube.com/watch?v=8DfztIIqbTI" target="_blank">
+      <a href="http://www.youtube.com/watch?v=IKmQW7JTb6s" target="_blank">
 	<img src="images/quote.png" alt="A famous quote !"></img>
       </a>
     </header>
