AAC support improved. Little bug fix in H264Packetizer.
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@213 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -100,6 +100,7 @@
 		<div class="select-group">
 		  <label>Resolution : </label>
 		  <select id="resolution">
+		    <option>1280x720</option>
 		    <option selected>640x480</option>
 		    <option>320x240</option>
 		    <option>176x144</option>
