--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -118,6 +118,7 @@
 		<div class="select-group">
 		  <label>Bitrate : </label>
 		  <select id="bitrate">
+		    <option>2000 kbps</option>
 		    <option selected>1000 kbps</option>
 		    <option>700 kbps</option>
 		    <option>500 kbps</option>
