--- a/assets/www/credits.htm
+++ b/assets/www/credits.htm
@@ -12,6 +12,7 @@
     <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="js/translations.js" type="text/javascript"></script>
     <script>$(document).ready(function () {$('h1,h2,span,p').translate();});</script>
+    <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
     <!--[if lt IE 9 ]>    
 	<script src="js/ie.js" type="text/javascript"></script>
@@ -22,6 +23,17 @@
 
   <body>
 
+    <div id="fb-root"></div>
+    <script>
+      (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/fr_FR/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <div id="background"></div>
 
     <header>
@@ -30,31 +42,49 @@
     </header>
 
     <div id="about"><a href="/"><p>Return</p></a></div>
-    <div id="facebook"><a href="http://www.facebook.com/spydroidipcamera" target="_blank"><img src="images/facebook.png" alt="facebook page" /><p>Like it on facebook !!</p></a></div>
+    
+    <div id="social-networks">
+      <div style="float:left;padding-right:10px;" class="fb-like" data-href="http://www.facebook.com/spydroidipcamera" data-send="false" data-layout="button_count" data-show-faces="false"></div>
+      <div style="float:left;" class="g-plusone" data-size="medium" data-href="https://play.google.com/store/apps/details?id=net.majorkernelpanic.spydroid"></div>
+    </div>
+    
+
 
     <section id="credits">
 
-      <div><h1>Here is an ugly page with the sources for all medias used in spydroid</h1></div>
+      <div><h1>Here is a list of all medias used in Spydroid with the name of their author !</h1></div>
 
-      <div>
-	<ul>
-	  <div><h1>All those sounds were found on freesound.org</h1></div>
+      <div id="sounds">
+	  <div><h1>Sounds were found on freesound.org</h1></div>
 	  <div>
-	    <li><a href="http://www.freesound.org/people/IFartInUrGeneralDirection/sounds/37733/">Fart sound</a>: IFartInUrGeneralDirection</li>
-	    <li><a href="http://www.freesound.org/people/IFartInUrGeneralDirection/sounds/53922/">Fart 2 sound</a>: IFartInUrGeneralDirection</li>
-	    <li><a href="http://www.freesound.org/people/Omar%20Alvarado/sounds/93741/">Explosion sound</a>: Omar Alvarado</li>
-	    <li><a href="http://www.freesound.org/people/csengeri/sounds/27246/">Thunder sound</a>: csengeri</li>
-	    <li><a href="http://www.freesound.org/people/Leady/sounds/26729/">Insane laughter sound</a>: Leady</li>
-	    <li><a href="http://www.freesound.org/people/NoiseCollector/sounds/6207/">Horror ambiance sound</a>: NoiseCollector</li>
-	    <li><a href="http://www.freesound.org/people/steveygos93/sounds/91572/">Gunshot sound</a>: steveygos93</li>
-	    <li><a href="http://www.freesound.org/people/NoiseCollector/sounds/4914/">Cat sound</a>: NoiseCollector</li>
-	    <li><a href="http://www.freesound.org/people/NoiseCollector/sounds/4912/">Dog sound</a>: NoiseCollector</li>
+	    <div>
+	      <ul>
+		<li><a href="http://www.freesound.org/people/Leady/sounds/26729/">Insane laughter sound</a> by Leady</li>
+		<li><a href="http://www.freesound.org/people/NoiseCollector/sounds/6207/">Horror ambiance sound</a> by NoiseCollector</li>
+		<li><a href="http://www.freesound.org/people/thebardofblasphemy/sounds/107032/">Long scary growl</a> by thebardofblasphemy</li>
+		<li><a href="http://www.freesound.org/people/steveygos93/sounds/91572/">Gunshot sound</a> by steveygos93</li>
+		<li><a href="http://www.freesound.org/people/NoiseCollector/sounds/4914/">Cat sound</a> by NoiseCollector</li>
+		<li><a href="http://www.freesound.org/people/NoiseCollector/sounds/4912/">Dog sound</a> by NoiseCollector</li>
+	      </ul>
+	    </div>
+	    <div>
+	      <ul>
+		<li><a href="http://www.freesound.org/people/IFartInUrGeneralDirection/sounds/37733/">Fart sound</a> by IFartInUrGeneralDirection</li>
+		<li><a href="http://www.freesound.org/people/IFartInUrGeneralDirection/sounds/53922/">Fart 2 sound</a> by IFartInUrGeneralDirection</li>
+		<li><a href="http://www.freesound.org/people/mookie182/sounds/52234/">snoring</a> by mookie182</li>
+		<li><a href="http://www.freesound.org/people/Omar%20Alvarado/sounds/93741/">Explosion sound</a> by Omar Alvarado</li>
+		<li><a href="http://www.freesound.org/people/csengeri/sounds/27246/">Thunder sound</a> by csengeri</li>
+		<li><a href="http://www.freesound.org/people/klankbeeld/sounds/133674/">Horror laugh</a> by klankbeeld</li>
+	      </ul>
+	    </div>
 	  </div>
-	</ul>
       </div>
 
       <div id="logo">
-	<img src="images/eye.png" alt="Pretty Eye"></img><h1>This logo was made by a folk named <a href="http://deleket.deviantart.com/">Deleket</a></h1>
+	<div>
+	  <div><img src="images/eye.png" alt="Pretty Eye"></img><br />This logo was made by a folk named <a href="http://deleket.deviantart.com/">Deleket</a></div>
+	  <div><img src="images/speaker.png" alt="Pretty Eye"></img><br />This image was made by <a href="http://kde-look.org/usermanager/search.php?username=Sephiroth6779">Sergio Sanchez Lopez</a></div>
+	</div>
       </div>
 
     </section>
