More complete french translation. Some bug fixes in the HTTP interface. Bug fix: sometimes the HTTP server & the RTSP server could be stopped when the app was running in background.
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@230 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -90,10 +90,10 @@
 	      <!-- AUDIO CONFIG  -->
 	      <div class="block audio">
 		<div class="checkbox-group">
-		  <label><input type="checkbox" checked="true" id="audioEnabled"></input>Stream sound</label>
+		  <label><input type="checkbox" checked="true" id="audioEnabled"></input><span>Stream sound</span></label>
  		</div>
 		<div class="select-group">
-		  <label>Encoder: </label>
+		  <label><span>Encoder</span> : </label>
 		  <select id="audioEncoder">
 		    <option>AMR-NB</option>
 		    <option>AAC</option>
@@ -104,17 +104,17 @@
 	      <!-- VIDEO CONFIG  -->
 	      <div class="block video">
 		<div class="checkbox-group">
-		  <label><input type="checkbox" checked="true" id="videoEnabled"></input>Stream video</label>
+		  <label><input type="checkbox" checked="true" id="videoEnabled"></input><span>Stream video</span></label>
 		</div>
 		<div class="select-group">
-		  <label>Encoder : </label>
+		  <label><span>Encoder</span> : </label>
 		  <select id="videoEncoder">
 		    <option selected>H.263</option>
 		    <option>H.264</option>
 		  </select>
 		</div>
 		<div class="select-group">
-		  <label>Resolution : </label>
+		  <label><span>Resolution</span> : </label>
 		  <select id="resolution">
 		    <option>1280x720</option>
 		    <option selected>640x480</option>
@@ -151,7 +151,7 @@
 	      <!-- CACHE SIZE -->
 	      <div class="block cache">
 		<div class="select-group">
-		  <label>Cache size : </label>
+		  <label><span>Cache size</span> : </label>
 		  <select id="cache">
 		    <option>3000 ms</option>
 		    <option>2000 ms</option>
