A nice person translated spydroid in russian. German translation updated as well. Some CSS cleaning.
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@231 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/assets/www/credits.htm
+++ b/assets/www/credits.htm
@@ -41,7 +41,7 @@
       <a href="http://www.youtube.com/watch?v=8DfztIIqbTI" target="_blank"><img src="images/quote.png" alt="A famous quote !"></img></a>
     </header>
 
-    <div id="about"><a href="/"><p>Return</p></a></div>
+    <div id="about"><a href="/">Return</a></div>
     
     <div id="social-networks">
       <div style="float:left;padding-right:10px;" class="fb-like" data-href="http://www.facebook.com/spydroidipcamera" data-send="false" data-layout="button_count" data-show-faces="false"></div>
