--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -43,7 +43,7 @@
       </a>
     </header>
 
-    <div id="about"><a href="credits.htm"><p>About</p></a></div>
+    <div id="about"><a href="credits.htm">About</a></div>
 
     <div id="social-networks">
       <div style="float:left;padding-right:10px;" class="fb-like" data-href="http://www.facebook.com/spydroidipcamera" data-send="false" data-layout="button_count" data-show-faces="false"></div>
@@ -74,7 +74,7 @@
 	<object id="xvlcv" width="640px" height="480px" classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921">
 	  <param name="toolbar" value="false" />
 	</object>
-	<div id="fullscreen"><span>Fullscreen</span></div>
+	<div id="fullscreen"><a>Fullscreen</a></div>
       </div>
 
       <div id="right-bar">
@@ -204,47 +204,47 @@
 	<div id="quality">
 	  <div id="title"><h1>Change quality settings</h1></div>
 	  <div id="content">
-	    <p>The H.264 compression algorithm is more efficient but may not work on your phone...</p>
-	    <p>Try it instead of H.263 if video streaming is not working at all !</p>
-	    <p>If the stream is choppy, try reducing the bitrate or increasing the cache size.</p>
+	    <em>The H.264 compression algorithm is more efficient but may not work on your phone...</em>
+	    <em>Try it instead of H.263 if video streaming is not working at all !</em>
+	    <em>If the stream is choppy, try reducing the bitrate or increasing the cache size.</em>
 	  </div>
 	</div>
 	<div id="flash">
 	  <div id="title"><h1>Toggle flash</h1></div>
 	  <div id="content">
-	    <p>This will simply toggle the led in front of you're phone, so that even in the deepest darkness, you will not be blind...</p>
-	    <p>Or you could use this to surprise your victim !</p>
+	    <em>This will simply toggle the led in front of you're phone, so that even in the deepest darkness, you will not be blind...</em>
+	    <em>Or you could use this to surprise your victim !</em>
 	  </div>
 	</div>
 	<div id="cameras">
 	  <div id="title"><h1>Switch between cameras</h1></div>
 	  <div id="content">
-	    <p>Useful if your phone has two cameras</p>
+	    <em>Useful if your phone has two cameras</em>
 	  </div>
 	</div>
 	<div id="sounds">
 	  <div id="title"><h1>Play a prerecorded sound</h1></div>
 	  <div id="content">
-	    <p>Those buttons will trigger sounds on your phone...</p>
-	    <p>Use them to surprise your victim.</p>
+	    <em>Those buttons will trigger sounds on your phone...</em>
+	    <em>Use them to surprise your victim.</em>
 	  </div>
 	</div>
-	<span id="hide-tooltip"><h2>Hide those tips</h2></span>
+	<span id="hide-tooltip"><a>Hide those tips</a></span>
       </div>
 
     </section>
 
     <div class="popup" id="error-screenoff">
-      <h1>You must leave the screen of your smartphone on !</h1>
-      <a href="#" id="close"><h2>Close</h2></a>
+      <h2>You must leave the screen of your smartphone on !</h2>
+      <a href="#" id="close">Close</a>
     </div>
 
     <div class="popup" id="error-noplugin">
-      <h1>You need to install VLC first !</h1>
+      <h2>You need to install VLC first !</h2>
       <h3>Get VLC: <a href="http://www.videolan.org/vlc/#download" target="_blank">Linux</a> <a href="http://www.videolan.org/vlc/download-windows.html" target="_blank">Windows</a> <a href="http://www.videolan.org/vlc/download-macosx.html" target="_blank">MacOSX</a></h3>
-      <p>During the installation make sure to check the firefox plugin !</p>
+      <div id="content"><h3>During the installation make sure to check the firefox plugin !</h3></div>
       <img src="images/install.jpg" width="316px" height="243px" alt="Install VLC and the mozilla plugin" />
-      <a href="#" id="close"><h2>Close</h2></a>
+      <a href="#" id="close">Close</a>
     </div>
     <div id="glass"></div>
 
