The HTTP interface do not use the RTSP server anymore

--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="less/styles.css"> 
     <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="js/translations.js" type="text/javascript"></script>
-    <script src="js/ui.js" type="text/javascript"></script>
+    <script src="js/ui2.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
     <!--[if lt IE 9 ]>    
@@ -64,15 +64,9 @@
 	            toolbar="false"
 	            width="640px"
 	            height="480px"
-	            style="visibility:hidden;display:none;"
+	            style="visibility:hidden;"
 	            id="vlcv">
 	     </embed>
-	     <object id="xvlca" width="1px" height="1px" classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921" style="position:absolute;top:0;left:0;visibility:hidden;">
-	       <param name="toolbar" value="false" />
-	     </object>
-	     <object id="xvlcv" width="640px" height="480px" classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921">
-	       <param name="toolbar" value="false" />
-	     </object>
 	     <div id="fullscreen"><a>Fullscreen</a></div>
         <div id="battery"><span>Battery</span>: <span id="level">100</span>%</div>
       </div>
@@ -214,7 +208,7 @@
 	     <div id="flash">
 	       <div id="title"><h1>Toggle flash</h1></div>
 	       <div id="content">
-	         <em>This will simply toggle the led in front of you're phone, so that even in the deepest darkness, you will not be blind...</em>
+	         <em>This will simply toggle the led in front of you're phone, so that even in the deepest darkness, you shall not be blind...</em>
 	         <em>Or you could use this to surprise your victim !</em>
 	       </div>
 	     </div>
