--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="less/styles.css"> 
     <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="js/translations.js" type="text/javascript"></script>
-    <script src="js/ui2.js" type="text/javascript"></script>
+    <script src="js/ui.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
     <!--[if lt IE 9 ]>    
