Readded popup if no vlc plugin. Remote control of the volume.

--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -67,6 +67,11 @@
 	            style="visibility:hidden;"
 	            id="vlcv">
 	     </embed>
+	     <div id="sound">
+          <div id="plus"><a>+</a></div>
+          <div id="volume">?</div>
+          <div id="minus"><a>-</a></div>
+        </div>
 	     <div id="fullscreen"><a>Fullscreen</a></div>
         <div id="battery"><span>Battery</span>: <span id="level">100</span>%</div>
       </div>
@@ -227,7 +232,6 @@
 	     </div>
 	     <span id="hide-tooltip"><a>Hide those tips</a></span>
       </div>
-
     </section>
 
     <div class="popup" id="error-screenoff">
@@ -236,9 +240,9 @@
     </div>
 
     <div class="popup" id="error-noplugin">
-      <h2>You need to install VLC first !</h2>
+      <h2>You need to install or update VLC and the VLC mozilla plugin ! qsdqs qsdqs qsdqs</h2>
       <h3>Get VLC: <a href="http://www.videolan.org/vlc/#download" target="_blank">Linux</a> <a href="http://www.videolan.org/vlc/download-windows.html" target="_blank">Windows</a> <a href="http://www.videolan.org/vlc/download-macosx.html" target="_blank">MacOSX</a></h3>
-      <div id="content"><h3>During the installation make sure to check the firefox plugin !</h3></div>
+      <div id="content"><h3>During the installation make sure to check the mozilla plugin !</h3></div>
       <img src="images/install.jpg" width="316px" height="243px" alt="Install VLC and the mozilla plugin" />
       <a href="#" id="close">Close</a>
     </div>
