MediaCodec API support on the way. Important changes in RtpSocket. New RtspClient class for wowza users.

--- a/assets/www/index.htm
+++ b/assets/www/index.htm
@@ -240,7 +240,7 @@
     </div>
 
     <div class="popup" id="error-noplugin">
-      <h2>You need to install or update VLC and the VLC mozilla plugin ! qsdqs qsdqs qsdqs</h2>
+      <h2>You need to install or update VLC and the VLC mozilla plugin !</h2>
       <h3>Get VLC: <a href="http://www.videolan.org/vlc/#download" target="_blank">Linux</a> <a href="http://www.videolan.org/vlc/download-windows.html" target="_blank">Windows</a> <a href="http://www.videolan.org/vlc/download-macosx.html" target="_blank">MacOSX</a></h3>
       <div id="content"><h3>During the installation make sure to check the mozilla plugin !</h3></div>
       <img src="images/install.jpg" width="316px" height="243px" alt="Install VLC and the mozilla plugin" />
